--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,3 +12,18 @@
     width: 100%;
     max-height: 800px;
 }
+
+.Profesionales{
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+#mostrarjuegos{
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.Contacto{
+  margin-left: 100px;
+  margin-right: 100px;
+}
